--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@angular2-material/icon": "^2.0.0-alpha.8-experimental3",
-    "@swimlane/ngx-datatable": "^12.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "ngx-socket-io": "^1.0.8",
     "rxjs": "6.1.0",
